removing craps in the folder and adding real meaningful stuff

--- a/htmls/login.html
+++ b/htmls/login.html
@@ -24,9 +24,8 @@
     </div>
   </div>
   <!--########################################################-->
-  <div class="login">
-    <form id="sign_in">
-      <div class="title">
+    <form id="login" class="forms">
+      <div class="titles">
         <h3>Log in</h3>
       </div>
       <div class="inputs">
@@ -40,6 +39,6 @@
         <a class="to_left" href="index.html">BACK</a>
       </div>
     </form>
-  </div>	
+
 </body>
 </html>
