--- a/htmls/dashboards/Past_projects.html
+++ b/htmls/dashboards/Past_projects.html
@@ -3,7 +3,7 @@
 <head>
   <title>Industry Engagement</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <div class="to_right">  
           <form action="#" method="post" id="search">  
             <input type="text" value="Search&hellip;" onfocus="this.value=(this.value=='Search&hellip;')? '' : this.value ;" />
-            <input type="image" id="go" src="images/search_r.gif" alt="Search" />
+            <input type="image" id="go" src="../images/search_r.gif" alt="Search" />
           </form>
         </div>
 
@@ -45,11 +45,11 @@
     <div class="left_part to_left">
       <div id="tabs" class="to_right button">
         <ul>
-          <li><a id="in_focus" href="dashboard.html">Newly submitted</a></li>
-          <li><a href="dashboards/Accepted.html">Accepted</a></li>
-          <li><a href="dashboards/Rejected.html">Rejected</a></li>
-          <li><a href="dashboards/Pending.html">Pending</a></li>
-          <li><a href="dashboards/Past_projects.html">Past projects</a></li>
+          <li><a href="../dashboard.html">Newly submitted</a></li>
+          <li><a href="Accepted.html">Accepted</a></li>
+          <li><a href="Rejected.html">Rejected</a></li>
+          <li><a href="Pending.html">Pending</a></li>
+          <li><a id="in_focus" href="Past_projects.html">Past projects</a></li>
         </ul>
       </div>
     </div>
