adding buttons to container

--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -56,9 +56,27 @@
 
     <!--********************-->
     <div id="container" class="shadow to_left">
-	
-	
-	
+        <h3>Newly  Submitted</h3>
+		<div id="search_date" class="to_left">
+			<input type="text" value="Date"  maxlength=2 id="date">
+			<input type="text" value="Month" maxlength=2 id="month">
+			<input type="text" value="Year" maxlength=4 id="year" >
+        </div>
+			
+		<div class="button to_right">
+          <ul>
+            <li><a href="#">Accept</a></li>
+            <li><a href="#">Reject</a></li>
+            <li><a href="#">Suspend</a></li>
+          </ul>
+        </div>
+		<div id="action_to_info" class="button to_right">
+          <ul>
+            <li><a href="#">Discard</a></li>
+            <li><a href="#">Draft</a></li>
+            <li><a href="#">Send</a></li>
+          </ul>
+        </div>
 	
     </div>
     
