adding styles to dashboards

--- a/htmls/about.html
+++ b/htmls/about.html
@@ -49,11 +49,10 @@
       </div>
     </div>
   <!--##############################################################-->
-
   <!--##############################################################-->
   <div class="wrapper content">
     <div id="news" class="flex_height shadow">
-      <p class="justify"> About
+      <p class="justify">Support
       </p>
     </div>
   </div>
