--- a/htmls/assign_students.html
+++ b/htmls/assign_students.html
@@ -40,27 +40,21 @@
   <div class="wrapper content">
     <!--********************-->  
     <div class="left_part to_left">
-
       <div id="tabs" class="to_right button">
         <ul>
-          <li><a id="in_focus" href="dashboard.html">Newly submitted</a></li>
-          <li><a href="projects/Accepted.html">Accepted</a></li>
-          <li><a href="projects/Rejected.html">Rejected</a></li>
-          <li><a href="projects/Pending.html">Pending</a></li>
-          <li><a href="projects/Past_projects.html">Past projects</a></li>
+          <li><a href="Process_Items_in_Cart.html">Add extra info</a></li>
+          <li><a href="assign_students.html">Assign students</a></li>
         </ul>
       </div>
     </div>
 
     <!--********************-->
     <div id="container" class="to_left shadow">
-
       <div class="flex_height">
         <div id="action_to_project" class="to_right button">
           <ul>
-            <li><a href="#">Accept</a></li>
-            <li><a href="#">Reject</a></li>
-            <li><a href="#">Suspend</a></li>
+            <li><a href="#">Add</a></li>
+            <li><a href="#">Remove</a></li>
           </ul>
         </div>
 		  </div>
@@ -68,36 +62,24 @@
       <div id="project_showing" class="general_box flex_height shadow"> 
         <div class="to_left" id="project_list">
           <fieldset>
-            <legend>
-              <div id="search_date">      
-                <input class="to_left" type="text" id="datepicker" value="Filter by date">
-              </div>
-            </legend>
+            <legend>Students</legend>
 
             <select  size="18">
-              <option value="project1">project1</option>
-              <option value="project2">project2</option>
-              <option value="project3">project3</option>
-              <option value="project4">project4</option>
-              <option value="project5">project5</option>
-              <option value="project6">project6</option>
-              <option value="project7">project7</option>
-              <option value="project8">project8</option>
-              <option value="project9">project9</option>
-              <option value="project10">project10</option>
-              <option value="project11">project11</option>
-              <option value="project12">project12</option>
-              <option value="project13">project13</option>
-              <option value="project14">project14</option>
-              <option value="project15">project15</option>
+              <option value="a12322">a1232223 - Alex</option>
+              <option value="a123220">a123220 - Leo</option>
+              <option value="a123221">a123221</option>
+              <option value="a123222">a123222</option>
+              <option value="a123223">a123223</option>
+              <option value="a123224">a123224</option>
+              <option value="a123225">a123225</option>
             </select>
           </fieldset>
         </div>
 
         <div id="show_specification" class="to_right" >
           <fieldset>
-            <legend>Project description</legend>
-            <textarea rows="13">There are some project specification....</textarea>
+            <legend>Student Details</legend>
+            <textarea rows="13">Student Details...</textarea>
           </fieldset>
         </div>
 
