--- a/htmls/projects/Past_projects.html
+++ b/htmls/projects/Past_projects.html
@@ -31,7 +31,7 @@
 
         <div id="menu" class="button to_left">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Items in Cart</a></li>
           </ul>
@@ -46,18 +46,17 @@
       <div id="tabs" class="to_right button">
         <ul>
           <li><a href="../dashboard.html">Newly submitted</a></li>
-          <li><a id="in_focus" href="Accepted.html">Accepted</a></li>
+          <li><a href="Accepted.html">Accepted</a></li>
           <li><a href="Rejected.html">Rejected</a></li>
           <li><a href="Pending.html">Pending</a></li>
-          <li><a href="Past_projects.html">Past projects</a></li>
+          <li><a id="in_focus" href="Past_projects.html">Past projects</a></li>
         </ul>
       </div>
     </div>
 
     <!--********************-->
     <div id="container" class="shadow to_left">
-        <h3>Accepted</h3>
-	
+        <h3>Past Projects</h3>
 	
 	
 	
