--- a/htmls/submit.html
+++ b/htmls/submit.html
@@ -1,5 +1,4 @@
- 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="EN" lang="EN" dir="ltr">
 <head>
   <title>Industry Engagement</title>
@@ -46,10 +45,12 @@
       </fieldset>   
     </form>
     <div class="sep"></div>
-    <div id="subBtn" class="submit to_right"> 
-      <a href="#">SUBMIT</a>
-      <a href="index.html">CANCEL</a>
+    <div id="subBtn" class="button to_right"> 
+      <ul>
+        <li><a href="#">SUBMIT</a></li>
+        <li><a href="index.html">CANCEL</a></li>
+      </ul>
     </div>
- </div>
+  </div>
 </body>
 </html>
