--- a/htmls/projects/dashboard.html
+++ b/htmls/projects/dashboard.html
@@ -3,10 +3,10 @@
 <head>
   <title>Industry Engagement</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <link rel="stylesheet" href="styles/layout.css" type="text/css" />
-  <link rel="stylesheet" href="projects/DatePicker/jquery-ui.css">
-  <script src="projects/DatePicker/jquery-1.10.2.js"></script>
-  <script src="projects/DatePicker/jquery-ui.js"></script>
+  <link rel="stylesheet" href="../styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="dashboards/DatePicker/jquery-ui.css">
+  <script src="dashboards/DatePicker/jquery-1.10.2.js"></script>
+  <script src="dashboards/DatePicker/jquery-ui.js"></script>
   <script>
   $(function() {
     $( "#datepicker" ).datepicker();
@@ -28,9 +28,9 @@
 
         <div id="menu" class="button to_left">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="Process_Items_in_Cart.html">Process Cart</a></li>
+            <li><a href="#">Process Cart</a></li>
           </ul>
         </div>
       </div>
@@ -44,10 +44,10 @@
       <div id="tabs" class="to_right button">
         <ul>
           <li><a id="in_focus" href="dashboard.html">Newly submitted</a></li>
-          <li><a href="projects/Accepted.html">Accepted</a></li>
-          <li><a href="projects/Rejected.html">Rejected</a></li>
-          <li><a href="projects/Pending.html">Pending</a></li>
-          <li><a href="projects/Past_projects.html">Past projects</a></li>
+          <li><a href="dashboards/Accepted.html">Accepted</a></li>
+          <li><a href="dashboards/Rejected.html">Rejected</a></li>
+          <li><a href="dashboards/Pending.html">Pending</a></li>
+          <li><a href="dashboards/Past_projects.html">Past projects</a></li>
         </ul>
       </div>
     </div>
