add select student to sent mail

--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -102,13 +102,40 @@
         </div>
 
       </div>  
-
+		
       <!--*********************************************-->
-      <div id="communication" id="general_box" class="shadow flex_height">
+	  <div id="pick_to_communicate" class="general_box flex_height shadow to_left"> 
+          <fieldset>
+            <legend>Assigned Students</legend>
+
+            <select  size="7">
+              <option value="project1">project1</option>
+              <option value="project2">project2</option>
+              <option value="project3">project3</option>
+              <option value="project4">project4</option>
+              <option value="project5">project5</option>
+              <option value="project6">project6</option>
+              <option value="project7">project7</option>
+              <option value="project8">project8</option>
+              <option value="project9">project9</option>
+              <option value="project10">project10</option>
+              <option value="project11">project11</option>
+              <option value="project12">project12</option>
+              <option value="project13">project13</option>
+              <option value="project14">project14</option>
+              <option value="project15">project15</option>
+            </select>
+          </fieldset>
+		</div>
+	  
+	  
+	  
+      <!--*********************************************-->
+      <div id="communication" id="general_box" class="shadow flex_height to_right">
 		    <div id="message_box" class="to_left">
           <input class="to_left" type="text" placeholder="From: ">
           <input class="to_right" type="text" placeholder="To: ">
-          <textarea id="industry_interaction" rows="13">Messages...</textarea>
+          <textarea id="industry_interaction" rows="16">Messages...</textarea>
         </div>
 
   		  <div id="action_to_message" class="to_right button">
