change project to student

--- a/htmls/dashboard.html
+++ b/htmls/dashboard.html
@@ -109,21 +109,21 @@
             <legend>Assigned Students</legend>
 
             <select  size="7">
-              <option value="project1">project1</option>
-              <option value="project2">project2</option>
-              <option value="project3">project3</option>
-              <option value="project4">project4</option>
-              <option value="project5">project5</option>
-              <option value="project6">project6</option>
-              <option value="project7">project7</option>
-              <option value="project8">project8</option>
-              <option value="project9">project9</option>
-              <option value="project10">project10</option>
-              <option value="project11">project11</option>
-              <option value="project12">project12</option>
-              <option value="project13">project13</option>
-              <option value="project14">project14</option>
-              <option value="project15">project15</option>
+              <option value="student1">student1</option>
+              <option value="student2">student2</option>
+              <option value="student3">student3</option>
+              <option value="student4">student4</option>
+              <option value="student5">student5</option>
+              <option value="student6">student6</option>
+              <option value="student7">student7</option>
+              <option value="student8">student8</option>
+              <option value="student9">student9</option>
+              <option value="student10">student10</option>
+              <option value="student11">student11</option>
+              <option value="student12">student12</option>
+              <option value="student13">student13</option>
+              <option value="student14">student14</option>
+              <option value="student15">student15</option>
             </select>
           </fieldset>
 		</div>
