--- a/htmls/assign_students.html
+++ b/htmls/assign_students.html
@@ -84,9 +84,32 @@
         </div>
 
       </div>  
+	<!--*********************************************-->
+	  <div id="pick_to_communicate" class="general_box flex_height shadow to_left"> 
+          <fieldset>
+            <legend>Assigned Students</legend>
 
+            <select  size="7">
+              <option value="student1">student1</option>
+              <option value="student2">student2</option>
+              <option value="student3">student3</option>
+              <option value="student4">student4</option>
+              <option value="student5">student5</option>
+              <option value="student6">student6</option>
+              <option value="student7">student7</option>
+              <option value="student8">student8</option>
+              <option value="student9">student9</option>
+              <option value="student10">student10</option>
+              <option value="student11">student11</option>
+              <option value="student12">student12</option>
+              <option value="student13">student13</option>
+              <option value="student14">student14</option>
+              <option value="student15">student15</option>
+            </select>
+          </fieldset>
+		</div>	
       <!--*********************************************-->
-      <div id="communication" id="general_box" class="shadow flex_height">
+      <div id="communication_extra" id="general_box" class="shadow flex_height to_right">
 		    <div id="message_box" class="to_left">
           <input class="to_left" type="text" placeholder="From: ">
           <input class="to_right" type="text" placeholder="To: ">
